# simple-message-queue

./: README.md
client/: Cargo.toml
client/src/: client.rs  main.rs
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/enums/: code.rs  errors.rs  mod.rs  type.rs
lib/src/structs/: message.rs  mod.rs
lib/src/structs/helper/: message.rs  mod.rs
lib/src/traits/: client.rs  server.rs
server/: Cargo.toml
server/src/: main.rs  server.rs
