[package]
name = "smq-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
ctrlc = "3.2.5"
env_logger = "0.9.3"
log = "0.4.17"
smq-lib = { path = "../lib" }
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
